<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DSA Automobile Connectivity</string>
    <string name="action_settings">Settings</string>
    <string name="value_name">Value_Name</string>
    <string name="value">Value</string>
    <string name="mirror_label">Mirror Control</string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="window_label">Window Control</string>
    <string name="unlock">unlock</string>
    <string name="lock">lock</string>
    <string name="door_label">Door Control</string>
    <string name="measurements">Measurements Reading</string>
    <string name="ip_address">IP Address</string>
    <string name="unit">Unit</string>
    <string name="elapsedTime">Time Elapsed</string>
    <string name="averageSpeed">Average Speed</string>
    <string name="averageFuel">Average Fuel Consumption</string>
    <string name="numBreakEvents"># Sudden Break Events</string>
    <string name="numAccEvents"># Sudden Acceleration Events</string>

</resources>
