<!--
 ************************************************************************
 *                                                                      *
 *  DDDD     SSSS    AAA        Daten- und Systemtechnik Aachen GmbH    *
 *  D   D   SS      A   A       Pascalstrasse 28                        *
 *  D   D    SSS    AAAAA       52076 Aachen-Oberforstbach, Germany     *
 *  D   D      SS   A   A       Telefon: +49 (0)2408 / 9492-0           *
 *  DDDD    SSSS    A   A       Telefax: +49 (0)2408 / 9492-92          *
 *                                                                      *
 *                                                                      *
 *  (c) Copyright by DSA - all rights reserved                          *
 *                                                                      *
 ************************************************************************
 *
 * Initial Creation:
 *    Author      Ada Lezama
 *    Created on  21.10.2013
 *
 ************************************************************************
 *
 * Layout for the list that will display the mesurement values. This list
 * will have as elements a rich list (richlist_vehicle_values.xml) which
 * will be filled dynamically from the vehicla data.
 *
 ************************************************************************
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DSADiagnosticsActivity" >

    <TextView
        android:id="@+id/mirror_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mirror_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01" >

        <ImageButton
            android:id="@+id/mirror_up"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/up"
            android:onClick="moveMirrorUp"
            android:src="@drawable/up" />

        <ImageButton
            android:id="@+id/mirror_down"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/down"
            android:onClick="moveMirrorDown"
            android:src="@drawable/down" />

        <ImageButton
            android:id="@+id/mirror_left"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/left"
            android:onClick="moveMirrorLeft"
            android:src="@drawable/left" />

        <ImageButton
            android:id="@+id/mirror_right"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/right"
            android:onClick="moveMirrorRight"
            android:src="@drawable/right" />
    </LinearLayout>

    <TextView
        android:id="@+id/window_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/window_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01" >

        <ImageButton
            android:id="@+id/window_up"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/up"
            android:onClick="moveWindowUp"
            android:src="@drawable/up" />

        <ImageButton
            android:id="@+id/window_down"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/down"
            android:onClick="moveWindowDown"
            android:src="@drawable/down" />
    </LinearLayout>

    <TextView
        android:id="@+id/door_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/door_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01" >

        <ImageButton
            android:id="@+id/door_lock"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lock"
            android:onClick="lockDoor"
            android:src="@drawable/lock" />

        <ImageButton
            android:id="@+id/door_unlock"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/unlock"
            android:onClick="unlockDoor"
            android:src="@drawable/unlock" />
    </LinearLayout>

    <TextView
        android:id="@+id/measurements_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/measurements" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01" >

        <ImageButton
            android:id="@+id/refresh"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/measurements"
            android:onClick="measurementsRefresh"
            android:src="@drawable/refresh" />
    </LinearLayout>

    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </ListView>

</LinearLayout>